# SensorSystem

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  library.properties  setup_arduino.sh
Hub/: CMakeLists.txt  Makefile  Makefile.old  module.mk
Hub/data/: sensorsystem-hub.ini
Hub/include/hub/: compatibility.h
Hub/include/hub/internet/: helperfunctions.h  internetdevice.h  pppinternetdevice.h  wifiinternetdevice.h
Hub/include/hub/storage/: csvfilestorage.h  dropboxstorage.h
Hub/src/: CMakeLists.txt  config.cpp  cursesui.cpp  main.cpp
Hub/src/internet/: CMakeLists.txt  pppinternetdevice.cpp  wifiinternetdevice.cpp
Hub/src/storage/: CMakeLists.txt  csvfilestorage.cpp  dropboxstorage.cpp
Hub/tests/: .sync  csvfilestorage_test.cpp  cursesui_test.cpp  dropboxstorage_test.cpp
Networking/: CMakeLists.txt  Makefile  Makefile.old  README.md  module.mk  setup_arduino.sh
Networking/src/: packet.h  rf24radioreceiver.cpp  rf24radioreceiver.h  rf24radiotransmitter.cpp  rf24radiotransmitter.h
Networking/tests/receiver_arduino/: receiver_arduino.ino
Networking/tests/transmitter_arduino/: transmitter_arduino.ino
SensorArduino/: SensorArduino.ino  setup_arduino.sh
SensorArduinoHeadless/: SensorArduinoHeadless.ino
SensorArduinoLCD/: Commands.ino  Configurations.ino  MainMenu.ino  Memory.ino  SensorArduinoLCD.ino  UI.ino  setup_arduino.sh
SensorCore/: CMakeLists.txt  module.mk  setup_arduino.sh
SensorCore/src/: i2cerror.cpp  i2cerror.h  mlxsensor.cpp  mlxsensor.h  sensorcore.cpp  tempsensor.cpp  tslsensor.cpp  tslsensor.h
SensorCore/tests/mlxsensor_test/: mlxsensor_test.ino
SensorPi/: CMakeLists.txt  module.mk
SensorPi/data/: sensorsystem-sensor.ini
SensorPi/include/sensorpi/: config.h  lcdplate.h  mainmenu.h  ui.h
SensorPi/src/: CMakeLIsts.txt  config.cpp  lcdplate.cpp  main.cpp  mainmenu.cpp  ui.cpp
SensorPi/tests/: CMakeLists.txt  lcdtest.cpp
cmake/: ArduinoToolchain.cmake  SuperBuild.cmake  arduinocore.cmake  externaldependencies.cmake  systemdependencies.cmake
doc/: Configuring-the-Raspberry-Pis.md  Hardware-Setup-Guide.md  Software-Configurations.md  Software-Installation-and-Setup.md  index.md
include/: radioreceiver.h  radiotransmitter.h  rf24radioreceiver.h  rf24radiotransmitter.h
include/core/: util.h
include/core/data/: measurement.h
include/core/interfaces/: internetconnection.h  localstorage.h  remotestorage.h
include/hub/: commands.h  compatibility.h  config.h  cursesui.h  measurement.h  packetqueue.h  threadprocess.h  util.h
include/hub/commands/: command.h  commandscheduler.h
include/hub/controllers/: radiocontroller.h
include/hub/data/: measurement.h
include/hub/internet/: internetdevice.h
include/hub/services/: internetconnectionservice.h  measurementservice.h
include/hub/storage/: csvfilestorage.h  dropboxstorage.h  filestorage.h  remotestorage.h
include/storage/: dropboxstorage.h
src/: byte.h  config.cpp  cursesui.cpp  lightsensor.h  main.cpp  measurement.cpp  measurement.h  mlxsensor.cpp  packet.h  packetqueue.cpp  radioreceiver.h  radiotransmitter.h  rf24radioreceiver.cpp  rf24radioreceiver.h  rf24radiotransmitter.cpp  rf24radiotransmitter.h  sensorcore.cpp  sensorcore.h  tempsensor.h  threadprocess.cpp  tslsensor.cpp  tslsensor.h  util.cpp
src/commands/: commandscheduler.cpp
src/core/storage/: dropboxstorage.cpp
src/core/util/: util.cpp
src/data/: measurement.cpp
src/internet/: helperfunctions.cpp
src/services/: measurementservice.cpp
src/storage/: csvfilestorage.cpp  dropboxstorage.cpp
tests/: dropboxstorage_test.cpp
tests/mlxsensor_test/: mlxsensor_test.ino
tests/receiver_arduino/: receiver_arduino.ino
tests/transmitter_arduino/: transmitter_arduino.ino
tests/tslsensor_test/: tslsensor_test.ino
